--- a/index.html
+++ b/index.html
@@ -18,19 +18,67 @@
         <!-- sidebar -->
         <div class="sidebar">
 
+            <!-- logo -->
             <div>
                 <div>
-
+                    <img src="./img/logo.svg" alt="" class="logo">
                 </div>
-                <div></div>
-                <div></div>
-            </div>
-            <div>
 
+                <!-- menu -->
+                <div>
+                    <div>
+                        <div class="icona">
+                            <i class="fa-solid fa-house"></i>
+                        </div>
+                        <div class="voce-menu">
+                            Home
+                        </div>
+                    </div>
+                    <div>
+                        <div class="icona">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                        </div>
+                        <div class="voce-menu">
+                            Cerca
+                        </div>
+                    </div>
+                    <div>
+                        <div class="icona">
+                            <i class="fa-solid fa-book-open"></i>
+                        </div>
+                        <div class="voce-menu">
+                            La tua Libreria
+                        </div>
+                    </div>
+                </div>
+
+                <!-- playlist -->
+                <div class="playlist-zone">
+                    <div class="playlist-title">
+                        <div class="aggiungi">+</div>
+                        <h3 class="playlist"><strong>Crea Playlist</strong></h3>
+                    </div>
+
+                    <div class="nome-playlist-zone">
+                        <div class="nome-playlist">Nome Playlist</div>
+                        <div class="nome-playlist">Nome Playlist</div> 
+                        <div class="nome-playlist">Nome Playlist</div>
+                        <div class="nome-playlist">Nome Playlist</div>
+                        <div class="nome-playlist">Nome Playlist</div>
+                        <div class="nome-playlist">Nome Playlist</div>
+                        <div class="nome-playlist">Nome Playlist</div>
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div> Installa app</div>
+                <div class="linea"></div>
+                <div class="user"> <strong>Luigi Prencipe</strong> </div>
             </div>
         </div>
 
-        <!-- sezione destra -->
+        <!-- sezione superiore destra -->
         <div class="music-section">
             <div class="header">
                 <div class="pulsante-upgrade">
@@ -40,7 +88,7 @@
         </div>
     </div>
 
-    <!-- 2 sezione -->
+    <!-- parte bassa -->
     <div class="contenitore-bottom">
 
         <!-- canzone in riproduzione -->
