--- a/index.html
+++ b/index.html
@@ -85,6 +85,22 @@
                     EFFETTUA L'UPGRADE
                 </div>
             </div>
+
+            <!-- categorie -->
+            <div class="categorie">
+                <div>IN EVIDENZA</div>
+                <div>PODCAST</div>
+                <div>CLASSIFICHE</div>
+                <div>GENERI EMOOD</div>
+                <div>NUOVE USCITE</div>
+                <div>SCOPRI</div>
+            </div>
+
+            <!-- canzoni -->
+
+            <div class="recent">
+                <strong>Recent Played</strong> 
+            </div>
         </div>
     </div>
 
