aggiornamento prima riga

--- a/index.html
+++ b/index.html
@@ -97,9 +97,43 @@
             </div>
 
             <!-- canzoni -->
-
             <div class="recent">
                 <strong>Recent Played</strong> 
+            </div>
+
+            <div class="contenitore-brani-recenti">
+                <div class="copertina">
+                    <img src="./img/metal_lifting.jpg" alt="" class="img-copertina">
+                    <div class="didascalia">
+                        <div class="titolo-didascalia">
+                            <strong>Heavy Metal</strong>
+                        </div>
+                        <div class="artista">
+                            Subtitle
+                        </div>
+                    </div>
+                </div>
+
+                <div class="copertina">
+                    <img src="./img/stranger.jpeg" alt="" class="img-copertina">
+                </div>
+
+                <div class="copertina">
+                    <img src="./img/aquietplace.jpeg" alt="" class="img-copertina">
+                </div>
+                
+                <div class="copertina">
+                    <img src="./img/split.jpeg" alt="" class="img-copertina">
+
+                </div>
+
+                <div class="copertina">
+                    <img src="./img/cure.jpeg" alt="" class="img-copertina">
+                </div>
+                
+                <div class="copertina">
+                    <img src="./img/sinister.jpeg" alt="" class="img-copertina">
+                </div>
             </div>
         </div>
     </div>
