aggiornamento prima riga 2

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <div class="titolo-didascalia">
                             <strong>Heavy Metal</strong>
                         </div>
-                        <div class="artista">
+                        <div class="artista-2">
                             Subtitle
                         </div>
                     </div>
@@ -116,23 +116,62 @@
 
                 <div class="copertina">
                     <img src="./img/stranger.jpeg" alt="" class="img-copertina">
+                    <div class="didascalia">
+                        <div class="titolo-didascalia">
+                            <strong>Stranger Things, Vol.1 (a Netflix Original Series Soundtrack)</strong>
+                        </div>
+                        <div class="artista-2">
+                            Subtitle
+                        </div>
+                    </div>
                 </div>
 
                 <div class="copertina">
                     <img src="./img/aquietplace.jpeg" alt="" class="img-copertina">
+                    <div class="didascalia">
+                        <div class="titolo-didascalia">
+                            <strong>A quiet place</strong>
+                        </div>
+                        <div class="artista-2">
+                            Subtitle
+                        </div>
+                    </div>
                 </div>
                 
                 <div class="copertina">
                     <img src="./img/split.jpeg" alt="" class="img-copertina">
-
+                    <div class="didascalia">
+                        <div class="titolo-didascalia">
+                            <strong>Split</strong>
+                        </div>
+                        <div class="artista-2">
+                            Subtitle
+                        </div>
+                    </div>
                 </div>
 
                 <div class="copertina">
                     <img src="./img/cure.jpeg" alt="" class="img-copertina">
+                    <div class="didascalia">
+                        <div class="titolo-didascalia">
+                            <strong>A cure for wellness</strong>
+                        </div>
+                        <div class="artista-2">
+                            Subtitle
+                        </div>
+                    </div>
                 </div>
                 
                 <div class="copertina">
                     <img src="./img/sinister.jpeg" alt="" class="img-copertina">
+                    <div class="didascalia">
+                        <div class="titolo-didascalia">
+                            <strong>Sinister</strong>
+                        </div>
+                        <div class="artista-2">
+                            Subtitle
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
