completamento schermata desktop

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
         </div>
 
-        <!-- sezione superiore destra -->
+        <!-- sezione destra -->
         <div class="music-section">
             <div class="header">
                 <div class="pulsante-upgrade">
@@ -97,6 +97,8 @@
             </div>
 
             <!-- canzoni -->
+
+            <!-- prima riga -->
             <div class="recent">
                 <strong>Recent Played</strong> 
             </div>
@@ -170,6 +172,33 @@
                         </div>
                         <div class="artista-2">
                             Subtitle
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- seconda riga -->
+            <div class="recent">
+                <strong>Creato per Luigi Prencipe</strong> 
+            </div>
+            <div class="sottotitolo">
+                Più ascolti, più saranno accurati i suggerimenti.
+            </div>
+
+            <div class="contenitore-brani-recenti">
+                <div class="copertina">
+                    <img src="./img/radar.jpeg" alt="" class="img-copertina">
+                    <div class="didascalia">
+                        <div class="titolo-didascalia">
+                            <strong>Relase Radar</strong>
+                        </div>
+                    </div>
+                </div>
+                <div class="copertina">
+                    <img src="./img/mixdaily.jpeg" alt="" class="img-copertina">
+                    <div class="didascalia">
+                        <div class="titolo-didascalia">
+                            <strong>Daily mix</strong>
                         </div>
                     </div>
                 </div>
