--- a/index.html
+++ b/index.html
@@ -26,28 +26,35 @@
 
                 <!-- menu -->
                 <div>
-                    <div>
-                        <div class="icona">
-                            <i class="fa-solid fa-house"></i>
-                        </div>
-                        <div class="voce-menu">
-                            Home
-                        </div>
-                    </div>
-                    <div>
-                        <div class="icona">
-                            <i class="fa-solid fa-magnifying-glass"></i>
-                        </div>
-                        <div class="voce-menu">
-                            Cerca
+                    <div class="height40">
+                        <div class="bianco-bordo-verde">
+                            <div class="icona">
+                                <i class="fa-solid fa-house"></i>
+                            </div>
+                            <div class="voce-menu">
+                                Home
+                            </div>
                         </div>
                     </div>
-                    <div>
-                        <div class="icona">
-                            <i class="fa-solid fa-book-open"></i>
+
+                    <div class="height40">
+                        <div class="bianco-bordo-verde">
+                            <div class="icona">
+                                <i class="fa-solid fa-magnifying-glass"></i>
+                            </div>
+                            <div class="voce-menu">
+                                Cerca
+                            </div>
                         </div>
-                        <div class="voce-menu">
-                            La tua Libreria
+                    </div>
+                    <div class="height40">
+                        <div class="bianco-bordo-verde">
+                            <div class="icona">
+                                <i class="fa-solid fa-book-open"></i>
+                            </div>
+                            <div class="voce-menu">
+                                La tua Libreria
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -71,7 +78,7 @@
                 </div>
             </div>
 
-            <div>
+            <div class="white-hover">
                 <div> Installa app</div>
                 <div class="linea"></div>
                 <div class="user"> <strong>Luigi Prencipe</strong> </div>
@@ -88,12 +95,13 @@
 
             <!-- categorie -->
             <div class="categorie">
-                <div>IN EVIDENZA</div>
-                <div>PODCAST</div>
-                <div>CLASSIFICHE</div>
-                <div>GENERI EMOOD</div>
-                <div>NUOVE USCITE</div>
-                <div>SCOPRI</div>
+
+                <div class="height40"><div class="menu-hover">IN EVIDENZA</div></div>
+                <div class="height40"><div class="menu-hover">PODCAST</div></div>
+                <div class="height40"><div class="menu-hover">CLASSIFICHE</div></div>
+                <div class="height40"><div class="menu-hover">GENERI E MOOD</div></div>
+                <div class="height40"><div class="menu-hover">NUOVE USCITE</div></div>
+                <div class="height40"><div class="menu-hover">SCOPRI</div></div>
             </div>
 
             <!-- canzoni -->
