--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="screen.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
         </style>
@@ -78,8 +79,8 @@
                 </div>
             </div>
 
-            <div class="white-hover">
-                <div> Installa app</div>
+            <div>
+                <div class="white-hover"> Installa app</div>
                 <div class="linea"></div>
                 <div class="user"> <strong>Luigi Prencipe</strong> </div>
             </div>
