--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div>
                 <div>
                     <img src="./img/logo.svg" alt="" class="logo">
+                    <img src="./img/logo-small.svg" alt="" class="logo-small">
                 </div>
 
                 <!-- menu -->
@@ -79,7 +80,7 @@
                 </div>
             </div>
 
-            <div>
+            <div class="utente">
                 <div class="white-hover"> Installa app</div>
                 <div class="linea"></div>
                 <div class="user"> <strong>Luigi Prencipe</strong> </div>
@@ -97,12 +98,12 @@
             <!-- categorie -->
             <div class="categorie">
 
-                <div class="height40"><div class="menu-hover">IN EVIDENZA</div></div>
-                <div class="height40"><div class="menu-hover">PODCAST</div></div>
-                <div class="height40"><div class="menu-hover">CLASSIFICHE</div></div>
-                <div class="height40"><div class="menu-hover">GENERI E MOOD</div></div>
-                <div class="height40"><div class="menu-hover">NUOVE USCITE</div></div>
-                <div class="height40"><div class="menu-hover">SCOPRI</div></div>
+                <div class="height40"><div class="menu-hover"> <strong>IN EVIDENZA</strong> </div></div>
+                <div class="height40"><div class="menu-hover"> <strong>PODCAST</strong> </div></div>
+                <div class="height40"><div class="menu-hover"><strong>CLASSIFICHE</strong></div></div>
+                <div class="height40"><div class="menu-hover"><strong>GENERI E MOOD</strong></div></div>
+                <div class="height40"><div class="menu-hover"><strong>NUOVE USCITE</strong></div></div>
+                <div class="height40"><div class="menu-hover"><strong>SCOPRI</strong></div></div>
             </div>
 
             <!-- canzoni -->
@@ -227,9 +228,9 @@
                     <div class="artista">Artista</div>
                 </div>
             </div>
-            <div>
-                <i class="fa-regular fa-heart"></i>
-                <i class="fa-regular fa-folder"></i>
+            <div class="fav-fold">
+                <div><i class="fa-regular fa-heart"></i></div>
+                <div><i class="fa-regular fa-folder"></i></div>
             </div>
         </div>
 
