--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
 
                 <!-- menu -->
-                <div>
+                <div class="righe-menu">
                     <div class="height40">
                         <div class="bianco-bordo-verde">
                             <div class="icona">
