--- a/index.html
+++ b/index.html
@@ -260,10 +260,10 @@
         <!-- basso destro, volume -->
         <div class="bottom-right">
             <div>
-                <i class="fa-solid fa-list"></i></i>
+                <i class="fa-solid fa-list icon-none"></i></i>
             </div>
             <div>
-                <i class="fa-solid fa-desktop"></i>
+                <i class="fa-solid fa-desktop icon-none"></i>
             </div>
             <div>
                 <i class="fa-sharp fa-solid fa-volume-high"></i>
